# jaxsplat

./: .clang-format  .gitignore  CMakeLists.txt  COPYRIGHT.txt  LICENSE.txt  README.md  example.py  pyproject.toml  test.py
docs/: conf.py  index.md
docs/render/: index.md
examples/: benchmark.py  requirements.txt  single_image.py
jaxsplat/: __init__.py  _types.py  abstract.py  impl.py  lowering.py
jaxsplat/_project/: __init__.py  abstract.py  impl.py  lowering.py
jaxsplat/_projection/: __init__.py  abstract.py  impl.py  lowering.py
jaxsplat/_rasterization/: __init__.py  abstract.py  impl.py  lowering.py
jaxsplat/_rasterize/: __init__.py  abstract.py  impl.py  lowering.py
jaxsplat/_render/: __init__.py  abstract.py  impl.py  lowering.py
lib/: common.h  ffi.cu  ffi.cxx  ffi.h  impls.cu  impls.h  ops.cu  ops.h  render.cu  render.h
lib/kernels/: backward.cu  backward.h  forward.cu  forward.h  helpers.h  kernels.h  other.cu  other.h
